# Ahoum-Arkin

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  done.md  how-to-use.md  manage.py  package.json  pyproject.toml  requirements.txt  seed.py
ahoum/: __init__.py  asgi.py  celery.py  exception_handler.py  exceptions.py  urls.py  wsgi.py
ahoum/settings/: base.py  production.py
apps/accounts/: admin.py  models.py  otp.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_drop_legacy_bio_column.py
apps/enrollments/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/enrollments/migrations/: 0001_initial.py
apps/events/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py
postman/: Ahoum.postman_collection.json
scripts/: dev.sh  docker-entrypoint.sh  vercel-build.sh
